--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     }
   },
   "dependencies": {
+    "@expo/dev-tools": "^0.13.183",
     "@expo/metro-config": "^0.7.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.5.7",
@@ -45,6 +46,8 @@
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "^3.20.0",
-    "react-redux": "^8.0.5"
+    "react-redux": "^8.0.5",
+    "react-native-web": "~0.18.10",
+    "react-dom": "18.2.0"
   }
 }
