--- a/package.json
+++ b/package.json
@@ -39,15 +39,17 @@
     "expo-location": "^15.1.1",
     "expo-media-library": "^15.2.3",
     "expo-status-bar": "^1.4.4",
+    "expo-updates": "~0.16.4",
     "firebase": "^9.21.0",
+    "react-dom": "18.2.0",
+    "react-native": "^0.71.7",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-maps": "1.3.2",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "^3.20.0",
-    "react-redux": "^8.0.5",
     "react-native-web": "~0.18.10",
-    "react-dom": "18.2.0"
+    "react-redux": "^8.0.5"
   }
 }
